# bookshelf

./: .gitignore  README.md  bookshelf.py  fuzzy.py  install.sh  pyproject.toml  util.py
bookshelf/: app.py
src/bookshelf/: __init__.py  app.py  merge.py  util.py
src/bookshelf/tests/: test_merge.py
