[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookshelf"
version = "0.1.0"
description = "Documents management tool"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
bshelf = "bookshelf.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
